--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "sloan-seatsmart",
   "private": true,
+  "homepage": ".",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -11,6 +12,7 @@
   },
   "dependencies": {
     "@rollup/rollup-win32-arm64-msvc": "^4.53.3",
+    "@rollup/wasm-node": "^4.53.3",
     "@tailwindcss/vite": "^4.1.17",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.4",
