--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@rollup/rollup-win32-arm64-msvc": "^4.53.3",
     "@rollup/wasm-node": "^4.53.3",
     "@tailwindcss/vite": "^4.1.17",
     "html2canvas": "^1.4.1",
+    "i": "^0.3.7",
     "jspdf": "^3.0.4",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.556.0",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
+    "react-scripts": "^5.0.1",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
@@ -28,14 +29,13 @@
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
-    "autoprefixer": "^10.4.22",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
     "postcss": "^8.5.6",
     "postcss-nesting": "^10.2.0",
-    "tailwindcss": "^3.4.18",
+    "tailwindcss": "^4.1.17",
     "vite": "^7.2.4"
   }
 }
